syntax = "proto3";
option go_package = ".;pb";

//查询监控时长
enum QueryMonitorTime{
    OneHour = 0;                    //一小时
    SixHour = 1;                    //六小时
    OneDay  = 2;                    //一天
    SevenDay = 3;                   //七天
}

//查询主机监控数据
message QueryHostMonitorDataReq {
    QueryMonitorTime QueryTime = 1;
}

//查询主机监控数据
message QueryHostMonitorDataResp {
    double CurrCpuPer = 1;
    double CurrMemoryPer = 2;
    repeated string Keys = 3;
    repeated double Cpu = 4;
    repeated double Memory = 5;
}

//查询主机监控数据
message QueryClusterMonitorDataReq {
    QueryMonitorTime QueryTime = 1;
}

//查询主机监控数据
message ClusterMonitorData {
    double CurrCpuPer = 1;
    double CurrMemoryPer = 2;
    double CurrGoroutine = 3;
    double CurrPreWeight = 4;
    repeated string Keys = 5;
    repeated double Cpu = 6;
    repeated double Memory = 7;
    repeated double Goroutine = 8;
	repeated double PreWeight = 9;
}